<resources>
    <string name="app_name">10119232Latihan4</string>
    <string name="header1">Welcome to \nMyself Apps</string>
    <string name="header2">Get to know myself \nmore</string>
    <string name="header3">Know more about \nmy hobby or favorites</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>

    <string name="title_home">Home</string>
    <string name="title_activity">Activity</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>

    <!--Halaman Home-->
    <string name="nama">M Faisal Obara</string>
    <string name="description">Hello my name is\nMuhammad Faisal Obara,\ni\'m currently studying at\ncomputer university.</string>
    <string name="hobby">Hobby</string>
    <string name="swim">Swimming</string>
    <string name="game">Gaming</string>
    <string name="watch">Watch\nMovies</string>
    <string name="comp">Computer</string>
    <string name="girl">Girl</string>
    <string name="interest">Interest</string>
    <string name="business">Business</string>
    <string name="code">Code</string>
    <string name="stock">Stock</string>

    <!--Halaman Daily Activity-->
    <string name="daily">Daily Activity</string>
    <string name="pray">Praying</string>
    <string name="surf">Surfing</string>
    <string name="study">Homework\nor Study</string>
    <string name="eat">Eat</string>
    <string name="videos">Watch Random\nVideos</string>
    <string name="sleep">Sleep</string>

    <!--Halaman Favorite-->
    <string name="favorite">Favorite Song</string>
    <string name="closer">The Chainsmoker - Closer\nft. Halsey</string>
    <string name="rockabye">Clean Bandit - Rockabye\nft. Anne Marie &amp; Sean Paul</string>
    <string name="higedan">Official Higedandism - 115 kilo man</string>

    <!--Halaman Progile-->
    <string name="description2">Hello my name is Muhammad Faisal Obara.\nI still live with my parent and 2 brothers in Bandung.\nCurrently studying at computer university</string>
    <string name="contact">Contact Me</string>
    <string name="phone">+82 87739662235</string>
    <string name="mail">klsfaisalobara@gmail.com</string>
    <string name="facebook">facebook.com/faisalthewow</string>
    <string name="find">Find Me</string>
    <string name="street">Jl.Cibaduyut Raya No.159\nBojongloa Kidul, Bandung</string>
    <string name="about">About</string>
    <string name="version">MySelf Apps\nVersion 1.0</string>

    <string name="app">MySelf\nApps</string>
</resources>