<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp">

            <View
                android:id="@+id/bg1"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@drawable/background_tealgreen_5rad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:src="@drawable/flo"
                android:theme="@style/customCircleImage"
                app:layout_constraintEnd_toEndOf="@id/bg1"
                app:layout_constraintStart_toStartOf="@id/bg1"
                app:layout_constraintTop_toTopOf="@id/bg1" />

            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/nama"
                android:textColor="@color/royal_blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photo" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/description2"
                android:textColor="@color/seafoam_green"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nama" />

            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/contact"
                android:textColor="@color/royal_blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <TextView
                android:id="@+id/btnWa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/btn_green_5rad"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/phone"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/icon_whatsapp"
                app:layout_constraintBottom_toTopOf="@id/btnMail"
                app:layout_constraintStart_toStartOf="@id/bg2"
                app:layout_constraintTop_toTopOf="@id/bg2"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/btnMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/btn_red_5rad"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/mail"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/icon_mail"
                app:layout_constraintBottom_toTopOf="@id/btnFb"
                app:layout_constraintStart_toStartOf="@id/btnWa"
                app:layout_constraintTop_toBottomOf="@id/btnWa" />

            <TextView
                android:id="@+id/btnFb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/btn_blue_5rad"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/facebook"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/icon_facebook"
                app:layout_constraintBottom_toBottomOf="@id/bg2"
                app:layout_constraintStart_toStartOf="@id/btnWa"
                app:layout_constraintTop_toBottomOf="@id/btnMail" />

            <View
                android:id="@+id/bg2"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_x_5rad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contact" />

            <TextView
                android:id="@+id/find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/find"
                android:textColor="@color/royal_blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bg2" />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="10dp"
                android:padding="4dp"
                android:src="@drawable/location"
                android:scaleType="fitXY"
                android:theme="@style/customBorderedImage"
                app:layout_constraintTop_toBottomOf="@id/find"
                app:strokeColor="@color/transparent"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/btnAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_tealgreen_40rad"
                android:padding="8dp"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/location" />

            <View
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintTop_toBottomOf="@id/btnAbout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        app:itemTextAppearanceActive="@style/BottomNavigationView"
        app:itemTextAppearanceInactive="@style/BottomNavigationView"
        android:background="@color/teal_green"
        app:itemTextColor="@drawable/selector_layout"
        app:itemIconTint="@drawable/selector_layout"
        app:menu="@menu/menu"
        app:labelVisibilityMode="labeled"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>