<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Daily">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp">

            <View
                android:id="@+id/ruler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily"
                android:textColor="@color/royal_blue"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:drawableStart="@drawable/icon_pray"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/pray"
                android:textColor="@color/royal_blue"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/daily" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/seafoam_green"
                app:layout_constraintTop_toBottomOf="@id/pray" />

            <TextView
                android:id="@+id/surf"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/icon_surfing"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/surf"
                android:textColor="@color/royal_blue"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/ruler"
                app:layout_constraintTop_toBottomOf="@id/pray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/seafoam_green"
                app:layout_constraintTop_toBottomOf="@id/surf" />

            <TextView
                android:id="@+id/study"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/icon_book"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/study"
                android:textColor="@color/royal_blue"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/surf" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/seafoam_green"
                app:layout_constraintTop_toBottomOf="@id/study" />

            <TextView
                android:id="@+id/eat"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/icon_eat"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/eat"
                android:textColor="@color/royal_blue"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/ruler"
                app:layout_constraintTop_toBottomOf="@id/study" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/seafoam_green"
                app:layout_constraintTop_toBottomOf="@id/eat" />

            <TextView
                android:id="@+id/videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/icon_video"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/videos"
                android:textColor="@color/royal_blue"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eat" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/seafoam_green"
                app:layout_constraintTop_toBottomOf="@id/videos" />

            <TextView
                android:id="@+id/sleep"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/icon_sleep"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/sleep"
                android:textColor="@color/royal_blue"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/ruler"
                app:layout_constraintTop_toBottomOf="@id/videos" />

            <View
                android:id="@+id/last"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/seafoam_green"
                app:layout_constraintTop_toBottomOf="@id/sleep" />

            <View
                android:layout_width="match_parent"
                android:layout_height="90dp"
                app:layout_constraintTop_toBottomOf="@id/last" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
    android:id="@+id/bottom_navigation"
    android:layout_width="wrap_content"
    android:layout_height="70dp"
    app:itemTextAppearanceActive="@style/BottomNavigationView"
    app:itemTextAppearanceInactive="@style/BottomNavigationView"
    android:background="@color/teal_green"
    app:itemTextColor="@drawable/selector_layout"
    app:itemIconTint="@drawable/selector_layout"
    app:menu="@menu/menu"
    app:labelVisibilityMode="labeled"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:layout_alignParentBottom="true"/>
</RelativeLayout>